Remove stock move qty child process